# our-rotting-fathers

./: .gitignore  DEVELOPMENT.md  README.md  justfile  package.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  (+1 more)
tools/rotborn-recursion/: .gitignore  AUDIT_CONTENTS.txt  GameArtGenerator.desktop.template  LORE.md  PACKAGING_AUDIT.md  PACKAGING_QUICKSTART.md  PLAN.md  README.md  ROTBORN_AUDIT.md  START_HERE.md  TECHNICAL.md  ai_human_generator.py  export_to_godot.py  pyproject.toml  pyproject.toml.template  requirements.txt  rotborn_generator.py  run.sh  run_app.py  setup.sh
tools/rotborn-recursion/app/: __init__.py  dark_theme.py  main.py  main_window.py
tools/rotborn-recursion/app/models/: __init__.py  character_model.py
tools/rotborn-recursion/app/utils/: __init__.py  bg_removal.py
tools/rotborn-recursion/app/widgets/: __init__.py  bg_removal_panel.py  generation_controls.py
tools/rotborn-recursion/docs/: blog-post.md  itchio-page.md
tools/rotborn-recursion/export/: __init__.py  apng_exporter.py  individual_exporter.py  sheet_builder.py
tools/rotborn-recursion/factions/: __init__.py  architects_generator.py  purified_generator.py  rotborn_generator.py  system_generator.py
tools/rotborn-recursion/generator/: __init__.py  animation_generator.py  animation_types.py  anomaly_injector.py  broken_proportions.py  direction_renderer.py  mass_generator.py  pure_generator.py  rotborn_palettes.py
tools/rotborn-recursion/scripts/: generate_showcase.py
tools/rotborn-recursion/tests/: test_animation_types.py  test_anomalies.py  test_bug_fixes.py  test_determinism.py  test_direction_renderer.py  test_export.py  test_factions.py  test_haunted_animations.py  test_trauma_palettes.py
(+59 files in other folders)
