[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rotborn-recursion"
version = "1.0.0"
description = "Haunted sprite generator for dark fantasy RPGs — Our Rotting Father"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

authors = [
    {name = "Our Rotting Father RPG"},
]

keywords = ["sprite", "generator", "pixel-art", "dark-fantasy", "procedural", "game-dev"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.5.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0"]

[project.scripts]
rotborn = "rotborn_generator:main"

[project.gui-scripts]
rotborn-gui = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["generator*", "factions*", "export*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["generator", "factions", "export"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
